added some text

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li>Task 4</li>
         <li>Task 5</li>
         <li>Task 6</li>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos, necessitatibus odit commodi maxime consequuntur quaerat non vitae corrupti odio nobis ab aliquid ducimus. Reprehenderit numquam sapiente repudiandae nobis placeat neque.</p>
       </ul>
     </div>
 
